# textdither

./: LICENSE  README.md  img2dither-wrapper  imgdither-wrapper  pyproject.toml  text2dither-wrapper
src/textdither/: __about__.py  __init__.py  img2main.py  imgmain.py  main.py  main2.py
tests/: __init__.py
